; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/ti/extr_ti_gpio.c_ti_gpio_intr_clr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/ti/extr_ti_gpio.c_ti_gpio_intr_clr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ti_gpio_softc = type { i32 }

@TI_GPIO_IRQSTATUS_CLR_0 = common dso_local global i32 0, align 4
@TI_GPIO_IRQSTATUS_CLR_1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ti_gpio_softc*, i32)* @ti_gpio_intr_clr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ti_gpio_intr_clr(%struct.ti_gpio_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.ti_gpio_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.ti_gpio_softc* %0, %struct.ti_gpio_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ti_gpio_softc*, %struct.ti_gpio_softc** %3, align 8
  %6 = load i32, i32* @TI_GPIO_IRQSTATUS_CLR_0, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @ti_gpio_write_4(%struct.ti_gpio_softc* %5, i32 %6, i32 %7)
  %9 = load %struct.ti_gpio_softc*, %struct.ti_gpio_softc** %3, align 8
  %10 = load i32, i32* @TI_GPIO_IRQSTATUS_CLR_1, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @ti_gpio_write_4(%struct.ti_gpio_softc* %9, i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @ti_gpio_write_4(%struct.ti_gpio_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
